 - [ZBXNEXT-483] added vfs.file.contents[file,encoding] check (asaveljevs)
 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.4rc2

 - [ZBX-3086] fixed errors when edit hostgroup linkage for hosts and templates (Vedmak)
 - [ZBX-3025] resurrected unreachable pollers and StartPollersUnreachable configuration parameter (asaveljevs,Sasha)
 - [ZBX-2351] fixed server trying to insert duplicate eventids into the database (asaveljevs,Sasha)
 - [ZBX-3069] renamed monitoring graphs combobox "All" entry to "not selected" (Vedmak)

Changes for 1.8.4rc1

 - [ZBX-2872] greatly improved API methods consistency (Aly)
 - [ZBX-3070] fixed event date format inconsistency (Vedmak)
 - [ZBX-3068] fixed possible crash of server while processing passive proxies (Sasha)
 - [ZBX-3068] fixed server memory leak while processing passive proxies (Sasha)
 - [ZBX-2749] fixed length parameter being ignored for web.page.regexp[] (asaveljevs)
 - [ZBX-2749] fixed agent crash in web.page.regexp[] on very long matched fragments (asaveljevs)
 - [ZBX-2913] fixed agent becoming unresponsive due to web.page.* checks (asaveljevs)
 - [ZBXNEXT-430] added support of net.tcp.listen and net.udp.listen under Linux (Sasha)
 - [ZBX-453] fixed --disable-static enabling static compilation (asaveljevs)
 - [ZBX-2992] acknowledges are now hidden in event details when turned off (KB)
 - [ZBX-3050] fixed that host can be named like an existing template and otherwise (KB)
 - [ZBX-3019] fixed templated graphs not being copied to discovered hosts in DM setup; thanks to Alexander Ignatyev (asaveljevs)
 - [ZBX-2860] fixed usergroup renaming (Vedmak)